# AniListGiveawayBot

./: README.md  pyproject.toml  requirements.txt
giveawaybot/: bot.py
