[tool.poetry]
name = "giveawaybot"
version = "0.1.0"
description = "A simple bot that picks giveaway winners from an AniList user's followers list"
authors = ["Snaacky <snaacky@pm.me>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.27.1"
loguru = "0.6.0"

[tool.poetry.dev-dependencies]
black = "22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
